Database connection setup - ApplicationDbContext

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,9 +1,23 @@
 {
+  "ConnectionStrings": {
+    "MSSQLServerExpress": "Server=(localdb)\\mssqllocaldb;Database=DEVSTACK-DB-TEMPLATE;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MSSQLServer": "Data Source=DLOPEZS98;Initial Catalog=DEVSTACK-DB-TEMPLATE;Persist Security Info=true;User ID=DlopezS98;Password=${Gen3ricP@ssword}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  }
 }
