--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "MSSQLServerExpress": "Server=(localdb)\\mssqllocaldb;Database=DEVSTACK-DB-TEMPLATE;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MSSQLServer": "Data Source=DLOPEZS98;Initial Catalog=DEVSTACK-DB-TEMPLATE;Persist Security Info=true;User ID=DlopezS98;Password=${Gen3ricP@ssword}"
+    "MSSQLServer": "Data Source=DLOPEZS98;Initial Catalog=DEVSTACK-DB-TEMPLATE;Persist Security Info=true;User ID=DlopezS98;Password=DlopezS98.SQL;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
